--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -25,7 +25,7 @@ services:
       retries: 5
 
   backend:
-    image: 192.168.50.4:5000/healthify-backend:latest
+    image: 192.168.50.4:5000/healthify-backend
     environment:
       PORT: 5050
       DB_HOST: postgres
@@ -56,7 +56,7 @@ services:
       retries: 5
 
   frontend:
-    image: 192.168.50.4:5000/healthify-frontend:latest
+    image: 192.168.50.4:5000/healthify-frontend
     environment:
       API_BASE_URL: http://192.168.50.4:5050/api
     networks:
