--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -1,3 +1,4 @@
+---
 version: "3.8"
 
 services:
@@ -39,7 +40,6 @@ services:
       restart_policy:
         condition: on-failure
 
-
   node-exporter:
     image: prom/node-exporter:v1.7.0
     networks:
@@ -54,7 +54,8 @@ services:
   postgres-exporter:
     image: prometheuscommunity/postgres-exporter:v0.15.0
     environment:
-      DATA_SOURCE_NAME: "postgresql://postgres:postgres@postgres:5432/healthify?sslmode=disable"
+      DATA_SOURCE_NAME: >
+        postgresql://postgres:postgres@postgres:5432/healthify?sslmode=disable
     networks:
       - healthify_net
     ports:
@@ -84,6 +85,7 @@ services:
 
 volumes:
   grafana_data:
+  dashboards:
 
 networks:
   healthify_net:
