--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.2"
 
 services:
   postgres:
@@ -17,17 +17,12 @@ services:
         condition: on-failure
       placement:
         constraints:
-          - node.role == manager
+          - node.role == manager  # Postgres runs only on manager
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 30s
       timeout: 10s
       retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
   backend:
     image: 192.168.50.4:5000/healthify-backend:latest
@@ -41,25 +36,24 @@ services:
       EXPIRES_IN: 24h
     networks:
       - healthify_net
+    depends_on:
+      - postgres
     deploy:
       replicas: 2
       restart_policy:
         condition: on-failure
+      placement:
+        constraints: []  # can run on any node
     ports:
       - target: 5050
         published: 5050
         protocol: tcp
-        mode: host
+        mode: host  # published on all nodes
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:5050/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
   frontend:
     image: 192.168.50.4:5000/healthify-frontend:latest
@@ -67,10 +61,14 @@ services:
       API_BASE_URL: http://192.168.50.4:5050/api
     networks:
       - healthify_net
+    depends_on:
+      - backend
     deploy:
       replicas: 2
       restart_policy:
         condition: on-failure
+      placement:
+        constraints: []  # can run on any node
       update_config:
         parallelism: 1
         delay: 10s
@@ -78,17 +76,12 @@ services:
       - target: 5173
         published: 5173
         protocol: tcp
-        mode: host
+        mode: host  # published on all nodes
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:5173 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
 volumes:
   pgdata:
@@ -96,4 +89,5 @@ volumes:
 
 networks:
   healthify_net:
+    driver: overlay
     external: true
