--- a/deploy.yml
+++ b/deploy.yml
@@ -89,6 +89,7 @@
         owner: jenkins
         group: jenkins
         mode: '0644'
+        force: yes
 
     - name: Create external network healthify_net if not exists
       shell: docker network create --driver overlay healthify_net || true
