--- a/deploy.yml
+++ b/deploy.yml
@@ -131,12 +131,12 @@
         {% raw %}
         docker service ls --format '{{.Name}}' | grep healthify | while read svc; do
           echo "Service: $svc"
-          docker service ps $svc --no-trunc | grep -E 'Failed|Rejected|Shutdown'
+          docker service ps $svc --no-trunc | grep -E 'Failed|Rejected|Shutdown' || true
         done
         {% endraw %}
       register: failed_tasks
       changed_when: false
-
+      ignore_errors: true
 
     - name: Show failed task details
       debug:
