--- a/stack/grafana/dashboards/grafana.yml
+++ b/stack/grafana/dashboards/grafana.yml
@@ -1,9 +1,8 @@
 apiVersion: 1
-
-dashboards:
-  - name: Healthify Dashboards
+providers:
+  - name: 'default'
     orgId: 1
-    folder: "Healthify"
+    folder: ''
     type: file
     disableDeletion: false
     editable: true
