--- a/stack/prometheus/prometheus.yml
+++ b/stack/prometheus/prometheus.yml
@@ -5,22 +5,18 @@ rule_files:
   - "alert.rules.yml"
 
 scrape_configs:
-  - job_name: "prometheus"
+  - job_name: 'prometheus'
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ['localhost:9090']
 
-  - job_name: "node"
-    dns_sd_configs:
-      - names: ["tasks.node-exporter"]
-        type: A
-        port: 9100
-
-  - job_name: "postgres"
+  - job_name: 'node-exporter'
     static_configs:
-      - targets: ["postgres-exporter:9187"]
+      - targets: ['node-exporter:9100']
 
-  - job_name: "cadvisor"
-    dns_sd_configs:
-      - names: ["tasks.cadvisor"]
-        type: A
-        port: 8080
+  - job_name: 'postgres-exporter'
+    static_configs:
+      - targets: ['postgres-exporter:9187']
+
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets: ['cadvisor:8080']
