--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -3,9 +3,11 @@ version: "3.8"
 services:
   prometheus:
     image: prom/prometheus:v2.51.2
-    volumes:
-      - /home/jenkins/monitoring-stack/prometheus.yml:/etc/prometheus/prometheus.yml
-      - /home/jenkins/monitoring-stack/alert.rules.yml:/etc/prometheus/alert.rules.yml
+    configs:
+      - source: prometheus_config
+        target: /etc/prometheus/prometheus.yml
+      - source: alert_rules
+        target: /etc/prometheus/alert.rules.yml
     networks:
       - healthify_net
     ports:
@@ -24,8 +26,14 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
       - dashboards:/var/lib/grafana/dashboards
-      - /home/jenkins/monitoring-stack/prometheus-datasource.yml:/etc/grafana/provisioning/datasources/prometheus.yml
-      - /home/jenkins/monitoring-stack/grafana-dashboard.yml:/etc/grafana/provisioning/dashboards/grafana.yml
+    configs:
+      - source: prometheus_datasource
+        target: /etc/grafana/provisioning/datasources/prometheus.yml
+      - source: grafana_dashboard_config
+        target: /etc/grafana/provisioning/dashboards/grafana.yml
+    secrets:
+      - source: dashboard_jsons
+        target: /var/lib/grafana/dashboards/json
     networks:
       - healthify_net
     ports:
@@ -81,6 +89,20 @@ services:
 volumes:
   grafana_data:
   dashboards:
+
+configs:
+  prometheus_config:
+    file: /home/jenkins/monitoring-stack/prometheus.yml
+  alert_rules:
+    file: /home/jenkins/monitoring-stack/alert.rules.yml
+  prometheus_datasource:
+    file: /home/jenkins/monitoring-stack/prometheus-datasource.yml
+  grafana_dashboard_config:
+    file: /home/jenkins/monitoring-stack/grafana-dashboard.yml
+
+secrets:
+  dashboard_jsons:
+    file: /home/jenkins/monitoring-stack/dashboards/json/all_dashboards.tar.gz
 
 networks:
   healthify_net:
