--- a/deploy.yml
+++ b/deploy.yml
@@ -58,6 +58,50 @@
       when: all_images | length > 0
       ignore_errors: yes
 
+- name: Deploy Healthify Stack from Manager
+  hosts: manager
+  become: yes
+  tasks:
+    - name: Create Healthify deployment directory
+      file:
+        path: /home/jenkins/healthify-stack
+        state: directory
+        owner: jenkins
+        group: jenkins
+        mode: '0755'
+
+    - name: Copy Healthify stack file to manager
+      copy:
+        src: ./stack/docker-stack.yml
+        dest: /home/jenkins/healthify-stack/docker-stack.yml
+        owner: jenkins
+        group: jenkins
+        mode: '0644'
+        force: yes
+
+    - name: Create external network healthify_net if not exists
+      shell: docker network create --driver overlay healthify_net || true
+      args:
+        executable: /bin/bash
+      ignore_errors: true
+
+    - name: Ensure external volume pgdata exists
+      shell: docker volume create pgdata || true
+      args:
+        executable: /bin/bash
+      ignore_errors: true
+
+    - name: Deploy Healthify stack
+      shell: docker stack deploy -c /home/jenkins/healthify-stack/docker-stack.yml healthify
+      args:
+        warn: false
+      register: deploy_result
+      changed_when: "'Updating' in deploy_result.stdout or 'Creating' in deploy_result.stdout"
+
+    - name: Display Healthify deployment output
+      debug:
+        var: deploy_result.stdout_lines
+
 - name: Deploy Monitoring Stack
   hosts: manager
   become: yes
