--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -1,8 +1,6 @@
-version: "3.8"
-
 services:
   prometheus:
-    image: prom/prometheus:v2.51.2
+    image: prom/prometheus
     configs:
       - source: prometheus_config
         target: /etc/prometheus/prometheus.yml
@@ -11,17 +9,17 @@ services:
     networks:
       - healthify_net
     ports:
-      - "9090:9090"
+      - "${PROMETHEUS_PORT}:9090"
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
 
   grafana:
-    image: grafana/grafana:10.4.2
+    image: grafana/grafana
     environment:
-      GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
       GF_PATHS_PROVISIONING: /etc/grafana/provisioning
     volumes:
       - grafana_data:/var/lib/grafana
@@ -34,32 +32,32 @@ services:
     networks:
       - healthify_net
     ports:
-      - "3000:3000"
+      - "${GRAFANA_PORT}:3000"
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
 
   node-exporter:
-    image: prom/node-exporter:v1.7.0
+    image: prom/node-exporter
     networks:
       - healthify_net
     ports:
-      - "9100:9100"
+      - "${NODE_EXPORTER_PORT}:9100"
     deploy:
       mode: global
       restart_policy:
         condition: on-failure
 
   postgres-exporter:
-    image: prometheuscommunity/postgres-exporter:v0.15.0
+    image: prometheuscommunity/postgres-exporter
     environment:
       DATA_SOURCE_NAME: >
-        postgresql://postgres:postgres@postgres:5432/healthify?sslmode=disable
+        postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:5432/${POSTGRES_DB}?sslmode=disable
     networks:
       - healthify_net
     ports:
-      - "9187:9187"
+      - "${POSTGRES_EXPORTER_PORT}:9187"
     depends_on:
       - postgres
     deploy:
@@ -68,7 +66,7 @@ services:
         condition: on-failure
 
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.47.2
+    image: gcr.io/cadvisor/cadvisor
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -77,7 +75,7 @@ services:
     networks:
       - healthify_net
     ports:
-      - "8080:8080"
+      - "${CADVISOR_PORT}:8080"
     deploy:
       mode: global
       restart_policy:
